Some more error log fixes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1952,7 +1952,7 @@
 		job_tec_cloner:0 "Cloning Technician"
 		job_tec_cloner_plural:0 "Cloning Technicians"
 		job_tec_cloner_desc:0 "By a careful managing and a life dedicated to genetic tailoring, these individuals can replicate any genetic template with dedication, creating effective clones of any population."
-		job_tec_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_cloner_plural$ convert §Y$tec_loc_consumer_goods$§! and [root.GetTecClonerUpkeep] into §Y$tec_loc_biological_assembly$§!."
+		job_tec_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_cloner_plural$ convert §Y$tec_loc_consumer_goods$§! and [root.tec_cloner_upkeep] into §Y$tec_loc_biological_assembly$§!."
 		mod_job_tec_cloner_add:0 "$job_tec_cloner$ Jobs"
 		mod_job_tec_cloner_per_pop:0 "§G+1§! $job_tec_cloner$ Job per $VALUE$ Pops"
 		mod_job_tec_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
@@ -1960,7 +1960,7 @@
 		job_tec_cloner_drone:0 "Cloner Drone"
 		job_tec_cloner_drone_plural:0 "Cloner Drones"
 		job_tec_cloner_drone_desc:0 "These drones are dedicated to make and supervise extremely intrincated clone processes, that radically boost the population of the collective."
-		job_tec_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_cloner_drone_plural$ convert §Y$tec_loc_unity$§! and [root.GetTecClonerUpkeep] into §Y$tec_loc_biological_assembly$§!."
+		job_tec_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_cloner_drone_plural$ convert §Y$tec_loc_unity$§! and [root.tec_cloner_upkeep] into §Y$tec_loc_biological_assembly$§!."
 		mod_job_tec_cloner_drone_add:0 "$job_tec_cloner_drone$ Jobs"
 		mod_job_tec_cloner_drone_per_pop:0 "§G+1§! $job_tec_cloner_drone$ Job per $VALUE$ Pops"
 		mod_job_tec_cloner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
@@ -1968,7 +1968,7 @@
 		job_tec_master_cloner:0 "Master Cloner"
 		job_tec_master_cloner_plural:0 "Master Cloners"
 		job_tec_master_cloner_desc:0 "Only a few can reach the degree of perfection in genetic tailoring, biological weaving and template adjusts these individuals have achieved, now consecrated to increase the empire population, exponentially."
-		job_tec_master_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_master_cloner_plural$ convert [root.GetTecClonerUpkeep] into scaling §Y$tec_loc_biological_assembly$§!, £society£ §YSociety Research§! based on the building upgrade, and §Y$tec_loc_unity$§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+		job_tec_master_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_master_cloner_plural$ convert [root.tec_cloner_upkeep] into scaling §Y$tec_loc_biological_assembly$§!, £society£ §YSociety Research§! based on the building upgrade, and §Y$tec_loc_unity$§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
 		mod_job_tec_master_cloner_add:0 "$job_tec_master_cloner$ Jobs"
 		mod_job_tec_master_cloner_per_pop:0 "§G+1§! $job_tec_master_cloner$ Job per $VALUE$ Pops"
 		mod_job_tec_master_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
@@ -1979,7 +1979,7 @@
 		job_tec_master_cloner_drone:0 "Master Cloner Drone"
 		job_tec_master_cloner_drone_plural:0 "Master Cloner Drones"
 		job_tec_master_cloner_drone_desc:0 "This special kind of drone is able to weave and supervise extremely intrincated cloning processes, radically boosting the collective's population."
-		job_tec_master_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_master_cloner_drone_plural$ convert [root.GetTecClonerUpkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+		job_tec_master_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_master_cloner_drone_plural$ convert [root.tec_cloner_upkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
 		mod_job_tec_master_cloner_drone_add:0 "$job_tec_master_cloner_drone$ Jobs"
 		mod_job_tec_master_cloner_drone_per_pop:0 "§G+1§! $job_tec_master_cloner_drone$ Job per $VALUE$ Pops"
 		mod_job_tec_master_cloner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
