civic change batch

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -25,11 +25,11 @@
  tr_domination_trust_officers_desc:2 "§HUnlocks Edict:§! $edict_enhanced_surveillance$"
 # ------------------------------------------------- Expansion
  tr_expansion_galactic_ambition:0 "Undiscovered Wonders"
- tr_expansion_galactic_ambition_tooltip:0 "Our planets will gain a positive valuable £blocker£ §YResource deposit§! on colonization, or via £unity£ Planetary Decision."
+ tr_expansion_galactic_ambition_tooltip:0 "Our planets will gain a positive valuable §Y$tec_loc_resource_deposit$§! on colonization, or via £unity£ Planetary Decision."
  tr_expansion_galactic_ambition_delayed:0 "We must be ready for anything that awaits in the new frontiers we discover and trespass, and the riches and natural wonders we find are the key to our path to a better future."
 
  tr_expansion_galactic_ambition_vd:0 "Astral Design"
- tr_expansion_galactic_ambition_vd_tooltip:0 "Our Habitats will gain a positive valuable £blocker£ §YDeposit§! based on the habitat features on creation, or via £unity£ Planetary Decision."
+ tr_expansion_galactic_ambition_vd_tooltip:0 "Our Habitats will gain a positive valuable §Y$tec_loc_deposit$§! based on the habitat features on creation, or via £unity£ Planetary Decision."
  tr_expansion_galactic_ambition_vd_delayed:0 "New habitats must be well designed and suited with adequate installations in order to ensure our species a better future."
 
  tr_expansion_finish_vd:0 "$tr_expansion_finish$"
