--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1666,6 +1666,7 @@
 	job_tec_scavenger_plural:0 "Scavengers"
 	job_tec_scavenger_desc:0 "Trained to live and thrive in any condition, scavengers dedicate their lives to search and take back to their base any usable material or good found around; what some call trash, they call it treasure."
 	job_tec_scavenger_effect_desc:0 "[job_tec_scavenger_effect_desc]"
+	job_tec_scavenger_effect_desc_civic:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to generate diverse §Y$tec_loc_basic_resources$§!, §Y$tec_loc_industrial_resources$§!, §Y$tec_loc_strategic_resources$§! or even §Y$tec_loc_minor_artifacts$§! based on the £planet£ Planet type."
 	job_tec_scavenger_effect_desc_default:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to generate diverse §Y$tec_loc_basic_resources$§!."
 	job_tec_scavenger_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to find rich §Y$tec_loc_energy$§! deposits and packets of §Y$tec_loc_volatile_motes$§! around."
 	job_tec_scavenger_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of §Y$tec_loc_consumer_goods$§! to find rich §Y$tec_loc_food$§! deposits and packets of §Y$tec_loc_exotic_gases$§! around."
@@ -1682,7 +1683,8 @@
 	job_tec_scavenger_drone_plural:0 "Scavenger Drones"
 	job_tec_scavenger_drone_desc:0 "These drones have incredibly specific skills to sort, navigate and map nearby locations, tracking and obtaining any valuable resource or material found around."
 	job_tec_scavenger_drone_effect_desc:0 "[job_tec_scavenger_drone_effect_desc]"
-	job_tec_scavenger_drone_effect_desc_default:0 "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to generate diverse §Y$tec_loc_basic_resources$§!."
+	job_tec_scavenger_drone_effect_desc_default:0 "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to generate diverse §Y$tec_loc_basic_resources$§!, §Y$tec_loc_industrial_resources$§!, §Y$tec_loc_strategic_resources$§! or even §Y$tec_loc_minor_artifacts$§! based on the £planet£ Planet type."
+	job_tec_scavenger_drone_effect_desc_civic:0 "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to generate diverse §Y$tec_loc_basic_resources$§!."
 	job_tec_scavenger_drone_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich §Y$tec_loc_energy$§! deposits and packets of §Y$tec_loc_volatile_motes$§! around."
 	job_tec_scavenger_drone_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich §Y$tec_loc_food$§! deposits and packets of §Y$tec_loc_exotic_gases$§! around."
 	job_tec_scavenger_drone_effect_desc_cold:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich §Y$tec_loc_minerals$§! deposits and packets of §Y$tec_loc_rare_crystals$§! around."
