--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -433,7 +433,28 @@
 	concept_tec_specialist_job_tec_scavenger_icon: "£job_tec_scavenger£ $job_tec_scavenger$"
 	concept_tec_specialist_job_tec_scavenger_plural: "$job_tec_scavenger_plural$"
 	concept_tec_specialist_job_tec_scavenger_plural_icon: "£job_tec_scavenger£ $job_tec_scavenger_plural$"
-	concept_tec_specialist_job_tec_scavenger_desc: "§L$job_tec_scavenger_desc$§!\n\n$job_tec_scavenger_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+	concept_tec_specialist_job_tec_scavenger_desc: "§L$job_tec_scavenger_desc$§!\n\n$job_tec_scavenger_effect_desc_civic$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_geneticist: "$job_tec_geneticist$"
+	concept_tec_specialist_job_tec_geneticist_alias: "$job_tec_geneticist$"
+	concept_tec_specialist_job_tec_geneticist_icon: "£job_tec_geneticist£ $job_tec_geneticist$"
+	concept_tec_specialist_job_tec_geneticist_plural: "$job_tec_geneticist_plural$"
+	concept_tec_specialist_job_tec_geneticist_plural_icon: "£job_tec_geneticist£ $job_tec_geneticist_plural$"
+	concept_tec_specialist_job_tec_geneticist_desc: "§L$job_tec_geneticist_desc$§!\n\n$job_tec_geneticist_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_techno_priest: "$job_tec_techno_priest$"
+	concept_tec_specialist_job_tec_techno_priest_alias: "$job_tec_techno_priest$"
+	concept_tec_specialist_job_tec_techno_priest_icon: "£job_tec_techno_priest£ $job_tec_techno_priest$"
+	concept_tec_specialist_job_tec_techno_priest_plural: "$job_tec_techno_priest_plural$"
+	concept_tec_specialist_job_tec_techno_priest_plural_icon: "£job_tec_techno_priest£ $job_tec_techno_priest_plural$"
+	concept_tec_specialist_job_tec_techno_priest_desc: "§L$job_tec_techno_priest_desc$§!\n\n$job_tec_techno_priest_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_mecha_priest: "$job_tec_mecha_priest$"
+	concept_tec_specialist_job_tec_mecha_priest_alias: "$job_tec_mecha_priest$"
+	concept_tec_specialist_job_tec_mecha_priest_icon: "£job_tec_mecha_priest£ $job_tec_mecha_priest$"
+	concept_tec_specialist_job_tec_mecha_priest_plural: "$job_tec_mecha_priest_plural$"
+	concept_tec_specialist_job_tec_mecha_priest_plural_icon: "£job_tec_mecha_priest£ $job_tec_mecha_priest_plural$"
+	concept_tec_specialist_job_tec_mecha_priest_desc: "§L$job_tec_mecha_priest_desc$§!\n\n$job_tec_mecha_priest_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
 
 
@@ -450,6 +471,21 @@
 	concept_tec_specialist_job_bath_attendant_machine_plural: "$job_bath_attendant_machine_plural$"
 	concept_tec_specialist_job_bath_attendant_machine_plural_icon: "£job_bath_attendant_machine£ $job_bath_attendant_machine_plural$"
 	concept_tec_specialist_job_bath_attendant_machine_desc: "§L$job_bath_attendant_machine_desc$§!\n\n$job_bath_attendant_machine_effect_desc$\n\nStratum: §Y$pop_cat_complex_drone$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_scavenger_drone: "$job_tec_scavenger_drone$"
+	concept_tec_specialist_job_tec_scavenger_drone_alias: "$job_tec_scavenger_drone$"
+	concept_tec_specialist_job_tec_scavenger_drone_icon: "£job_tec_scavenger_drone£ $job_tec_scavenger_drone$"
+	concept_tec_specialist_job_tec_scavenger_drone_plural: "$job_tec_scavenger_drone_plural$"
+	concept_tec_specialist_job_tec_scavenger_drone_plural_icon: "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$"
+	concept_tec_specialist_job_tec_scavenger_drone_desc: "§L$job_tec_scavenger_drone_desc$§!\n\n$job_tec_scavenger_drone_effect_desc_civic$\n\nStratum: §Y$pop_cat_complex_drone$§!\nProduces:\n\n"
+
+
+	concept_tec_specialist_job_tec_geneticist_drone: "$job_tec_geneticist_drone$"
+	concept_tec_specialist_job_tec_geneticist_drone_alias: "$job_tec_geneticist_drone$"
+	concept_tec_specialist_job_tec_geneticist_drone_icon: "£job_tec_geneticist£ $job_tec_geneticist_drone$"
+	concept_tec_specialist_job_tec_geneticist_drone_plural: "$job_tec_geneticist_drone_plural$"
+	concept_tec_specialist_job_tec_geneticist_drone_plural_icon: "£job_tec_geneticist£ $job_tec_geneticist_drone_plural$"
+	concept_tec_specialist_job_tec_geneticist_drone_desc: "§L$job_tec_geneticist_drone_desc$§!\n\n$job_tec_geneticist_drone_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
  # /
  # Worker
