--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -81,8 +81,7 @@
 	tec_loc_trade: "$tec_loc_trade_value$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 	tec_loc_pop_growth_icon: "£mod_pop_growth_speed£"
-	tec_loc_job_output: "£job£ Output"
-
+	tec_loc_job_output: "£job£ Job Output"
 
 	tec_loc_defense_armies:0 "£defense_army£ Defense Armies"
 
@@ -97,19 +96,28 @@
 	tec_loc_jobs: "£job£ Jobs"
 	tec_loc_job: "£job£ Job"
 
+	tec_loc_designation: "£stability£ Designation"
+
 	tec_loc_district: "£district£ $DISTRICT$"
 	tec_loc_districts: "£district£ $DISTRICTS$"
 	tec_loc_building: "£building£ $BUILDING$"
 	tec_loc_buildings: "£building£ $BUILDINGS_TITLE$"
 	tec_loc_blocker: "£blocker£ $BLOCKER_DEPOSIT$"
 	tec_loc_blockers: "£blocker£ $BLOCKER_DEPOSITS$"
+	tec_loc_deposit: "£tec_deposit£ Deposit"
+	tec_loc_deposits: "$tec_loc_deposit$s"
+	tec_loc_resource_deposit: "£tec_deposit£ Resource Deposit"
+	tec_loc_resource_deposits: "$tec_loc_resource_deposit$s"
+	tec_loc_planet_feature: "£tec_planet_feature£ Planet Feature"
+	tec_loc_planet_features: "$tec_loc_planet_feature$s"
 
 	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
 	tec_loc_sr_tec_machine_processing_empire: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$"
 
+	tec_loc_robot_assembly:0 "£job_roboticist£ Mechanical Pop Assembly"
 	tec_loc_robot_assembly_add: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
 	tec_loc_robot_assembly_mult: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$ Mult"
-	tec_loc_biological_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$"
+	tec_loc_biological_assembly:0 "£mod_pop_growth_speed£ Organic Assembly"
 	tec_loc_biological_assembly_mult_per_pop: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ Mult per pop"
 	tec_loc_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
 	tec_loc_cybernetic_assembly_mult: "£mod_planet_pop_assembly_mult£ Cybernetic Assembly Mult"
