--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -70,8 +70,8 @@ decision_tec_environment_fix:0 "Environmental Restoration"
 # Discover wonder
  decision_tec_undiscovered_wonders:0 "Undiscovered Wonders" 
  decision_tec_undiscovered_wonders_desc:0 "There is much to see and discover in our worlds, there is much to uncover and learn from our new homes." 
- decision_tec_undiscovered_wonders_effects:1 "We will discover a positive §Y£blocker£ Deposit§! on this planet." 
- decision_tec_undiscovered_wonders_effects_short:2 "We will discover a positive §Y£blocker£ Deposit§! on this planet." 
+ decision_tec_undiscovered_wonders_effects:1 "We will discover a positive §Y$tec_loc_deposit$§! on this planet." 
+ decision_tec_undiscovered_wonders_effects_short:2 "We will discover a positive §Y$tec_loc_deposit$§! on this planet." 
 
 
 # Crime lord gestalt version
