Adjusted more concepts and requirements

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -166,7 +166,7 @@
 		job_tec_ai_computator:0 "Computator"
 		job_tec_ai_computator_plural:0 "Computators"
 		job_tec_ai_computator_desc:0 "Computators are experienced members of the ruling class dedicated to serve and operate the orders and functions of its empire AI."
-		job_tec_ai_computator_effect_desc:0 "['concept_tec_job_tec_ai_computator_plural_icon'] use §Y$tec_loc_consumer_goods$§! to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!"
+		job_tec_ai_computator_effect_desc:0 "['concept_tec_ruler_job_tec_ai_computator_plural_icon'] use §Y$tec_loc_consumer_goods$§! to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!"
 		mod_job_tec_ai_computator_per_pop:0 "§G+1§! $job_tec_ai_computator$ Job Per $VALUE$ Pops"
 		mod_job_tec_ai_computator_per_pop_short:0 "\n§G+1§! £mod_job_tec_ai_computator_add£ per $VALUE$ £pop£"
 		mod_job_tec_ai_computator_add:0 "$job_tec_ai_computator$ Jobs"
@@ -182,7 +182,7 @@
 		job_tec_ai_high_ordinator:0 "High Ordinator"
 		job_tec_ai_high_ordinator_plural:0 "High Ordinators"
 		job_tec_ai_high_ordinator_desc:0 "Serving the faith and the doctrines promulgated by its ruling AI, the highest rank of Ordinators ensure both are streamlined and well tuned."
-		job_tec_ai_high_ordinator_effect_desc:0 "['concept_tec_job_tec_ai_high_ordinator_plural_icon'] use §Y$tec_loc_consumer_goods$§! to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!."
+		job_tec_ai_high_ordinator_effect_desc:0 "['concept_tec_ruler_job_tec_ai_high_ordinator_plural_icon'] use §Y$tec_loc_consumer_goods$§! to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!."
 		mod_job_tec_ai_high_ordinator_per_pop:0 "§G+1§! $job_tec_ai_high_ordinator$ Job Per $VALUE$ Pops"
 		mod_job_tec_ai_high_ordinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_ai_high_ordinator_add£ per $VALUE$ £pop£"
 		mod_job_tec_ai_high_ordinator_add:0 "$job_tec_ai_high_ordinator$ Jobs"
@@ -956,7 +956,7 @@
 	job_commandante:0 "Commander"
 	job_commandante_plural:0 "Commanders"
 	job_commandante_desc:0 "An experienced military chief, either active or honorably discharged."
-	job_commandante_effect_desc:0 "£job_commandante£ $job_commandante_plural$ increase §Y$tec_loc_navalcap_from_jobs$§!, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
+	job_commandante_effect_desc:0 "['concept_tec_ruler_job_commandante_plural_icon'] increase §Y$tec_loc_navalcap_from_jobs$§!, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
 	mod_job_commandante_add:0 "$job_commandante$ Jobs"
 	mod_job_commandante_per_pop:0 "§G+1§! $job_commandante$ Job per $VALUE$ Pops"
 	mod_job_commandante_pop_short:0 "\n§G+1§! £mod_job_commandante_add£ per $VALUE$ £pop£"
