another civic batch

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -456,6 +456,12 @@
 	concept_tec_specialist_job_tec_mecha_priest_plural_icon: "£job_tec_mecha_priest£ $job_tec_mecha_priest_plural$"
 	concept_tec_specialist_job_tec_mecha_priest_desc: "§L$job_tec_mecha_priest_desc$§!\n\n$job_tec_mecha_priest_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_tec_landowner: "$job_tec_landowner$"
+	concept_tec_specialist_job_tec_landowner_alias: "$job_tec_landowner$"
+	concept_tec_specialist_job_tec_landowner_icon: "£job_tec_landowner£ $job_tec_landowner$"
+	concept_tec_specialist_job_tec_landowner_plural: "$job_tec_landowner_plural$"
+	concept_tec_specialist_job_tec_landowner_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
+	concept_tec_specialist_job_tec_landowner_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
 
 	concept_tec_specialist_job_bath_attendant_hive: "$job_bath_attendant_hive$"
@@ -523,6 +529,14 @@
 	concept_tec_worker_job_tec_druid_plural: "$job_tec_druid_plural$"
 	concept_tec_worker_job_tec_druid_plural_icon: "£job_tec_druid£ $job_tec_druid_plural$"
 	concept_tec_worker_job_tec_druid_desc: "§L$job_tec_druid_desc$§!\n\n$job_tec_druid_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_peasant: "$job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_alias: "$job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_icon: "£job_slave_toiler£ $job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_plural: "$job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
  # /
  # Unsorted
 	concept_tec_job_angler: "$job_angler$"
