--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -29,6 +29,7 @@
 # --------------------------- SCRIPTED LOC --------------------------------
 	tec_jump_empty:0 "\n\n"
 
+	tec_loc_warning:0 "£trigger_tec_warning£"
 
 	tec_loc_energy:0 "£energy£ $energy$"
 	tec_loc_minerals:0 "£minerals£ $minerals$"
@@ -117,8 +118,8 @@
 	tec_loc_robot_assembly:0 "£job_roboticist£ Mechanical Pop Assembly"
 	tec_loc_robot_assembly_add: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
 	tec_loc_robot_assembly_mult: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$ Mult"
-	tec_loc_biological_assembly:0 "£mod_pop_growth_speed£ Organic Assembly"
-	tec_loc_biological_assembly_mult_per_pop: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ Mult per pop"
+	tec_loc_organic_assembly:0 "£mod_pop_growth_speed£ Organic Assembly"
+	tec_loc_organic_assembly_mult_per_pop: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ Mult per pop"
 	tec_loc_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
 	tec_loc_cybernetic_assembly_mult: "£mod_planet_pop_assembly_mult£ Cybernetic Assembly Mult"
 
